# c2-adk-agentic-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/: plan.md
.github/instructions/: general-instructions.instructions.md
.github/prompts/: enhance-chunking-and-retrieving-strategy.prompt.md  initialize-project.prompt.md
assets/: HR-STD-001_Attendance_Working_Hours_Standard.txt  HR-STD-002_Leave_Management_Standard.txt  HR-STD-003_Employee_Onboarding_Probation_Standard.txt  HR-STD-004_Disciplinary_Code_of_Conduct_Standard.txt  HR-STD-005_Remote_Work_Hybrid_Work_Standard.txt  HR-STD-006_Training_Development_Standard.txt
docs/: architecture.md  setup.md  usage.md
src/: __init__.py  cli.py  config.py  landing.py  server.py  session_store.py
src/agents/: __init__.py  hr_agent.py
src/models/: user.py
src/rag/: __init__.py  chunker.py  embeddings.py  loader.py  retriever.py  vector_store.py
src/templates/: index.html
src/tools/: __init__.py  hr_tools.py
src/ui/: __init__.py  app.py
tests/: conftest.py  test_embeddings.py  test_hr_agent.py  test_hr_tools.py  test_retriever.py  test_session_store.py  test_vector_store.py
