[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adk-agentic-rag"
version = "0.1.0"
description = "Agentic RAG HR Chatbot powered by Google ADK, ChromaDB, and Chainlit"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
hr-chatbot = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
